Aula de CSS - Atividade 1 completa

--- a/Matérias - 1º Sem/Pesquisa e Inovação/Aula de CSS/cssInterno.html
+++ b/Matérias - 1º Sem/Pesquisa e Inovação/Aula de CSS/cssInterno.html
@@ -21,12 +21,12 @@
 
         .card-imagem {
             width: 100px;
-            border-radius: 0%;
+            border-radius: 50%;
         }
 
-        .card-image img {
+        .card-imagem img {
             width: 70%; 
-            height: 70%
+            height: 70%;
         }
         .card-titulo {
             font-size: 35px;
@@ -34,10 +34,10 @@
         .card-titulo .card-titulo-nome {
             color: cadetblue;
         }
-        .cad-span{
+        .card-span{
             font-style: italic;
             font-weight: bold; 
-            color: #b11a1a
+            color: #b11a1a;
         }
 
     </style>
@@ -49,8 +49,8 @@
             <img src="https://cdn-icons-png.flaticon.com/512/706/706830.png">
         </div>
         <div>
-            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome">Adriana</span></span></h1>
-            <p class="card-mensagem">Mensagem:<span>a vida não é um morango! E ta tudo bem!</span></p>
+            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome"> Adriana</span></span></h1>
+            <p class="card-mensagem">Mensagem:<span class="card-span"> A vida não é um morango! E ta tudo bem!</span></p>
         </div>
     </div>
 </body>
@@ -58,11 +58,11 @@
 <body style="margin: 0;">
     <div class="card">
         <div class="card-imagem">
-            <img src="https://cdn-icons-png.flaticon.com/512/706/706830.png">
+            <img src="https://cdn-icons-png.flaticon.com/512/706/706797.png">
         </div>
         <div>
-            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome">Fábio</span></span></h1>
-            <p class="card-mensagem">Mensagem:<span>Ser ou não ser, eis a questãoS</span></p>
+            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome"> Fábio</span></span></h1>
+            <p class="card-mensagem">Mensagem:<span class="card-span"> Ser ou não ser, eis a questão</span></p>
         </div>
     </div>
 </body>
