--- a/Matérias - 1º Sem/Pesquisa e Inovação/Aula de CSS/cssInline.html
+++ b/Matérias - 1º Sem/Pesquisa e Inovação/Aula de CSS/cssInline.html
@@ -11,12 +11,11 @@
     <div
         style="width: 500px; height: fit-content; border: 3px solid black; border-radius: 25px; background-color: aliceblue; margin: 10px;">
         <div style="width: 100px; border-radius: 50%;">
-            <img src="https://cdn-icons-png.flaticon.com/512/706/706830.png" style="width: 70%; height: 70%;"
-                alt="senhora de óculos">
+            <img src="https://cdn-icons-png.flaticon.com/512/706/706830.png" style="width: 70%; height: 70%;">
         </div>
         <div>
-            <h1><span style="font-size: 35px;">Meu nome: <span style="color: cadetblue;">Adriana</span></span></h1>
-            <p><span>Mensagem:<i style="font-weight: bold; color: #b11a1a";> a vida não é um morango! E ta tudo bem!</i></span></p>
+            <h1><span style="font-size: 35px;">Meu nome: <span style="color: cadetblue;"> Adriana</span></span></h1>
+            <p><span>Mensagem:<i style="font-weight: bold; color: #b11a1a";> A vida não é um morango! E ta tudo bem!</i></span></p>
         </div>
     </div>
 </body>
@@ -25,12 +24,11 @@
     <div
         style="width: 500px; height: fit-content; border: 3px solid black; border-radius: 25px; background-color: aliceblue; margin: 10px;">
         <div style="width: 100px; border-radius: 50%;">
-            <img src="https://cdn-icons-png.flaticon.com/512/706/706797.png" style="width: 70%; height: 70%;"
-                alt="senhora de óculos">
+            <img src="https://cdn-icons-png.flaticon.com/512/706/706797.png" style="width: 70%; height: 70%;">
         </div>
         <div>
-            <h1><span style="font-size: 35px;">Meu nome: <span style="color: cadetblue;">Adriana</span></span></h1>
-            <p><span>Mensagem:<i style="font-weight: bold; color: #b11a1a";> a vida não é um morango! E ta tudo bem!</i></span></p>
+            <h1><span style="font-size: 35px;">Meu nome: <span style="color: cadetblue;"> Fábio</span></span></h1>
+            <p><span>Mensagem:<i style="font-weight: bold; color: #b11a1a";> Ser ou não ser, eis a questão</i></span></p>
         </div>
     </div>
 </body>
