--- a/Matérias - 1º Sem/Pesquisa e Inovação/Aula de CSS/cssexterno/cssexterno.html
+++ b/Matérias - 1º Sem/Pesquisa e Inovação/Aula de CSS/cssexterno/cssexterno.html
@@ -14,8 +14,8 @@
             <img src="https://cdn-icons-png.flaticon.com/512/706/706830.png">
         </div>
         <div>
-            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome">Adriana</span></span></h1>
-            <p class="card-mensagem">Mensagem:<span>a vida não é um morango! E ta tudo bem!</span></p>
+            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome"> Adriana</span></span></h1>
+            <p class="card-mensagem">Mensagem:<span class="card-span"> A vida não é um morango! E ta tudo bem!</span></p>
         </div>
     </div>
 </body>
@@ -23,11 +23,11 @@
 <body style="margin: 0;">
     <div class="card">
         <div class="card-imagem">
-            <img src="https://cdn-icons-png.flaticon.com/512/706/706830.png">
+            <img src="https://cdn-icons-png.flaticon.com/512/706/706797.png">
         </div>
         <div>
-            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome">Fábio</span></span></h1>
-            <p class="card-mensagem">Mensagem:<span>Ser ou não ser, eis a questãoS</span></p>
+            <h1 class="card-titulo"><span>Meu nome:<span class="card-titulo-nome"> Fábio</span></span></h1>
+            <p class="card-mensagem">Mensagem:<span class="card-span"> Ser ou não ser, eis a questão</span></p>
         </div>
     </div>
 </body>
