Comandos Linux - Atividade

--- a/Matérias - 1º Sem/Algoritimos/Atividade Avaliativa 2/index.html
+++ b/Matérias - 1º Sem/Algoritimos/Atividade Avaliativa 2/index.html
@@ -38,7 +38,7 @@
 
         if (salarioBruto >= 10000) {
             descontoIR = salarioBruto * 0.125
-            salarioLiquido = salarioBruto - descontoIR; //Salário Liquido equivale ao salario Bruto COM o  o descontoIR
+            salarioLiquido = salarioBruto - descontoIR; //Salário Liquido equivale ao salario Bruto COM o descontoIR
 
         } else {
             salarioLiquido = salarioBruto; //Salário Liquido equivale ao salario Bruto SEM o descontoIR
