Lista09 Algoritmo - Incompleta

--- a/Matérias - 1º Sem/Algoritimos/Lista 08 - Operadores lógicos/Lista de OU/E-Ex06.html
+++ b/Matérias - 1º Sem/Algoritimos/Lista 08 - Operadores lógicos/Lista de OU/E-Ex06.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    Informe a nota do aluno:
+    Informe a nota do aluno:br
     <input type="number" id="input_notaAluno"><br>
     Informe a frequência do aluno:
     <input type="number" id="input_freqAluno"><br><br>
